# Computer-Vision-Point-Clouds

./: CMakeLists.txt  README.md
gestures/include/: Gesture.hpp
gestures/src/: Engine.cpp  Gesture.cpp  GestureClassifier.cpp
include/: ColorTracker.hpp  Engine.hpp  FaceDetector.hpp  Gesture.hpp  GestureClassifier.hpp  GestureRecognizer.hpp  ObjectTracker.hpp
point_cloud/: CMakeLists.txt  dep.txt
point_cloud/data/: segmented.ply
point_cloud/include/: Color.hpp  EuclidianClusterSegmentation.hpp  GroundExtractor.hpp  PCLVisualization.hpp  PLYLoader.hpp  Roofer.hpp
point_cloud/src/: Color.cpp  EuclidianClusterSegmentation.cpp  GroundExtractor.cpp  PCLVisualization.cpp  PLYLoader.cpp  Roofer.cpp  main.cpp  save_segmented.cpp
src/: ColorTracker.cpp  Engine.cpp  FaceDetector.cpp  Gesture.cpp  GestureClassifier.cpp  GestureRecognizer.cpp  ObjectTracker.cpp  main.cpp
